--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -17,7 +17,7 @@
     "%lld kg" : {
 
     },
-    "%lld Reps" : {
+    "%lld reps" : {
 
     },
     "%lld%%" : {
@@ -46,10 +46,10 @@
         }
       }
     },
-    "2-3 Sets" : {
+    "2-3 sets" : {
 
     },
-    "3-4 Sets" : {
+    "3-4 sets" : {
 
     },
     "3-5 reps" : {
@@ -62,7 +62,7 @@
         }
       }
     },
-    "4-6 Sets" : {
+    "4-6 sets" : {
 
     },
     "8-12 reps" : {
